Docker Icon Added

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta 
       name="description" 
-      content="Portfólio criado para espor projetos meus, criado utilizando ReactJS e Redux e outras tecnologias"
+      content="Portfolio created to expose my projects, created using ReactJS and Redux and other technologies"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
